--- a/views/index.pug
+++ b/views/index.pug
@@ -42,4 +42,5 @@ html
                         button.button Submit
 
            
-            footer &copy; Copyright 2020 
+            footer 💟 For any feedback or issues contact 
+                a(href="mailto:tushar.jo@endurance.com?subject=MockME - Feedback").clearlist Tushar Joshi
