--- a/views/index.pug
+++ b/views/index.pug
@@ -43,4 +43,4 @@ html
 
            
             footer 💟 For any feedback or issues contact 
-                a(href="mailto:tushar.jo@endurance.com?subject=MockME - Feedback").clearlist Tushar Joshi
+                a(target="_blank" href="mailto:tushar.jo@endurance.com?subject=MockME - Feedback").clearlist Tushar Joshi
