--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,7 @@
 html
    head
     title MockME&lt;/&gt;
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap")
     style
         include ../public/css/styles.css   
     body
